# intelligent-web-automation-agent

./: .env.example  .gitignore  README.md  demo.py  inspect_jobs.py  main.py  pyproject.toml  requirements.txt  test_email_config.py  update_env.py  update_smtp.py
config/: settings.py
examples/: job_monitor_demo.py  simple_scrape.py
src/browser/: automation.py
src/llm/: client.py  prompts.py
src/orchestrator/tasks/: job_board_monitor.py
src/utils/: logger.py  notifications.py  storage.py
tests/: verify_notifications.py
