[project]
name = "intelligent-web-automation-agent"
version = "0.1.0"
description = "LLM-powered web automation agent with Playwright and LangChain"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
    "langchain>=0.1.0",
    "langchain-groq>=0.0.1",
    "langchain-community>=0.0.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
web-agent = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
